[gd_scene load_steps=6 format=3 uid="uid://blgwy56e2lx33"]

[ext_resource type="Script" uid="uid://di23rjdi26apn" path="res://scenes/decor/scr_trash_bin.gd" id="1_d5rer"]
[ext_resource type="Texture2D" uid="uid://cnf7kdbq260pl" path="res://sprites/world/object/spr_trashbin.png" id="2_ddj4r"]
[ext_resource type="PackedScene" uid="uid://j12da57vuv2v" path="res://scenes/tech/scn_interaction_area.tscn" id="3_i22nc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fn1sd"]
size = Vector2(12, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iev6o"]
size = Vector2(10, 2)

[node name="TrashBin" type="Node2D"]
script = ExtResource("1_d5rer")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_ddj4r")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="InteractionArea" parent="." instance=ExtResource("3_i22nc")]
modulate = Color(0.905882, 0.639216, 1, 1)
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fn1sd")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_iev6o")
debug_color = Color(0.52549, 1, 1, 0.160784)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="interacted" from="InteractionArea" to="." method="_on_interaction_area_on_interact"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
